# Deskserver

./: .gitignore  BUILDING_A_SOFTWARE_KVM.md  Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: discovery.rs  edge.rs  lib.rs  main.rs  network.rs  state.rs  tray.rs
crates/app/src/ui/: connections.rs  layout.rs  log.rs  mod.rs  settings.rs  status.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: keymap.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/capture/: macos.rs  mod.rs  windows.rs
docs/superpowers/plans/: 2026-05-31-phase1-prove-the-pipe.md  2026-06-01-phase2-suppression-keyboard.md  2026-06-01-screen-layout-logic.md  2026-06-01-ui-dashboard.md
docs/superpowers/specs/: 2026-05-31-phase1-prove-the-pipe-design.md  2026-06-01-phase2-suppression-keyboard-design.md  2026-06-01-screen-layout-logic-design.md  2026-06-01-ui-dashboard-design.md
tests/integration/: edge_test.rs  keymap_test.rs  protocol_test.rs
