[workspace]
members = ["crates/common", "crates/server", "crates/client", "crates/app"]
resolver = "2"

[package]
name = "deskserver-workspace"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
deskserver-common = { path = "crates/common" }
deskserver = { path = "crates/app" }

[[test]]
name = "protocol_test"
path = "tests/integration/protocol_test.rs"

[[test]]
name = "keymap_test"
path = "tests/integration/keymap_test.rs"

[[test]]
name = "edge_test"
path = "tests/integration/edge_test.rs"
