[package]
name = "deskserver"
version = "0.1.0"
edition = "2021"

[dependencies]
deskserver-common = { path = "../common" }
kvm-server = { path = "../server" }
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
chrono = "0.4"
tray-icon = "0.19"
mdns-sd = "0.11"
enigo = "0.2"
