[package]
name = "kvm-server"
version = "0.1.0"
edition = "2021"
default-run = "test_server"

[dependencies]
deskserver-common = { path = "../common" }
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
